webgcode/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webgcode
  labels:
    chart: "webgcode-1.0.0"
    app: webgcode
    chart: "webgcode-1.0.0"
    release: "release-name"
    heritage: "Tiller"
spec:
  type: NodePort
  ports:
  - name: webgcode-http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: webgcode
